# AngelScript-JIT-Compiler

./: .gitignore  CMakeLists.txt  LICENSE
cmake/: flags.cmake
include/arm64/: compiler.hpp
include/x86-64/: compiler.hpp
src/: CMakeLists.txt  arm64-compiler.cpp  main.cpp  x86-64-compiler.cpp
test/: example.cpp
